--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,7 @@
     <a
     href="#"
     class="list-group-item clearfix"
-    (click)="OnSelected()">
+    (click)="onSelected()">
       <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.Name}}</h4>
         <p class="list-group-item-text">{{recipe.Description}}</p>
