--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,24 +3,29 @@
     <div class="navbar-header">
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
-    <div
-      class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active">
-          <a routerLink="/recipes">Recipes</a>
+          <a *ngIf="isAuthenticated" routerLink="/recipes">Recipes</a>
         </li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping List</a>
         </li>
+        <li routerLinkActive="active">
+          <a *ngIf="!isAuthenticated" routerLink="/auth">Log in</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated" class="">
+          <a style="cursor: pointer;" (click)="logout()">LogOut</a>
+        </li>
+        <li *ngIf="isAuthenticated" class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
-          <ul class="dropdown-menu">
-            <li><a style="cursor: pointer">Save Data</a></li>
-            <li><a style="cursor: pointer">Fetch Data</a></li>
+          <ul class="dropdown-menu" >
+            <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
+            <li><a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
