--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,10 +5,12 @@
     <ul class="list-group">
       <a class="list-group-item"
       style="cursor: pointer"
-      *ngFor="let ingredient of (ingredients | async).ingredients; let i = index"
+      *ngFor="
+      let ingredient of (ingredients | async).ingredients;
+      let i = index"
       (click)="onEdit(i)"
       >
-      {{ingredient.name}} {{ingredient.amount}}
+      {{ingredient.name}} ({{ingredient.amount}})
       </a>
       </ul>
   </div>
